Bug 459160 - "Show Code Map Ruler" label on "Local Editor Settings" popup truncated
-Changed the 'width' css property to 'min-width' so that the label can stretch (this does take the label out of alignment if it exceeds 150px in width. Better fix required here.)

--- a/bundles/org.eclipse.orion.client.ui/web/css/controls.css
+++ b/bundles/org.eclipse.orion.client.ui/web/css/controls.css
@@ -821,7 +821,7 @@ textarea.parameterInput {
 }
 
 .local .setting-label {
-	width: 150px;
+	min-width: 150px;
 	text-align: right;
 	display: inline-block;
 }
